update css login

--- a/src/index.css
+++ b/src/index.css
@@ -178,14 +178,15 @@ iframe {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #00a9a2;
-  background-image: url("./images/tryberchef.jpg");
+  background-image: url("./images/fundo_desktop.png");
   background-size: cover;
 }
 
@@ -201,13 +202,73 @@ iframe {
   -webkit-backdrop-filter: blur(3px);
           backdrop-filter: blur(3px);
   padding: 10px;
-  width: 90vw;
+  width: 50vw;
+  margin-left: 40%;
   border-radius: 5px;
 }
 
 .btn-primary {
-  background-color: #00a9a2 !important;
-  border: none !important;
+  background-image: 
+  linear-gradient(135deg, black 0%, #ff0000 100%);
+  border: 4px solid !important;
+  border-image: linear-gradient(135deg, #ff0000 0%, #000000 100%) 1 !important;
+}
+
+.title-login {
+  display: flex;
+  color: #e7e7e7;
+  padding: 10px;
+  width: 50vw;
+  margin-left: 40%;
+  justify-content: center;
+  height: 10%;
+  align-items: center;
+  margin-bottom: 3%;
+}
+
+@media ( max-width : 768px ) {
+  .login {
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-image: url("./images/fundo_mobile.png") !important;
+    background-size: cover;
+  }
+  
+  .login .inputs {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: rgba(250, 250, 250, 0.8);
+    -webkit-backdrop-filter: blur(3px);
+            backdrop-filter: blur(3px);
+    padding: 10px;
+    width: 90vw !important;
+    margin: auto;
+    border-radius: 5px;
+  }
+
+  .title-login {
+    display: flex;
+    color: #e7e7e7;
+    width: 90vw !important;
+    margin: 0;
+    justify-content: center;
+    height: 10%;
+    align-items: center;
+    margin-bottom: 10%;
+  }
 }
 
 @font-face {
