--- a/src/index.css
+++ b/src/index.css
@@ -174,7 +174,7 @@ iframe {
 }
 
 .login {
-  height: 100vh;
+  height: 100vh !important;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -224,11 +224,13 @@ iframe {
   height: 10%;
   align-items: center;
   margin-bottom: 3%;
+  font-family: KithcenHome, sans-serif;
 }
 
 @media ( max-width : 768px ) {
   .login {
     height: 100vh;
+    overflow-y: hidden !important;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -268,6 +270,7 @@ iframe {
     height: 10%;
     align-items: center;
     margin-bottom: 10%;
+    font-family: KithcenHome, sans-serif;
   }
 }
 
@@ -282,15 +285,15 @@ iframe {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: #00a9a2;
-  width: 100vw;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  background-color: rgb(41, 41, 41);
+  max-width: 100vw;
   font-family: KithcenHome, sans-serif;
-  padding: 5px;
+  padding: 0;
   color: #e5ece9;
 }
 
@@ -298,15 +301,16 @@ iframe {
   font-weight: 600;
   width: -webkit-fit-content;
   width: -moz-fit-content;
-  width: fit-content;
-  margin-left: 5vw;
-  margin-bottom: 0;
+  width: 200px;
+  margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+    -ms-flex-align: end;
+      align-items: flex-end;
+  align-items: center;
+  justify-content: center;
 }
 
 .search-bar {
@@ -338,8 +342,8 @@ iframe {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+    -ms-flex-pack: justify;
+      justify-content: space-between;
 }
 
 .explore {
@@ -369,8 +373,8 @@ iframe {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+    -ms-flex-direction: column;
+      flex-direction: column;
 }
 
 .explore-btns button {
@@ -384,39 +388,6 @@ iframe {
 @font-face {
   font-family: KithcenHome;
   src: url("./fonts/KitchenHome-rg0gB.ttf");
-}
-
-.header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: #00a9a2;
-  width: 100vw;
-  font-family: KithcenHome, sans-serif;
-  padding: 5px;
-  color: #e5ece9;
-}
-
-.header h2 {
-  font-weight: 600;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin-left: 5vw;
-  margin-bottom: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
 }
 
 .search-bar {
@@ -493,7 +464,7 @@ iframe {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #00a9a2;
+  background-color: #d6961f;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -655,7 +626,7 @@ iframe {
 .lds-default div {
   -webkit-animation: lds-default 1.2s linear infinite;
           animation: lds-default 1.2s linear infinite;
-  background: #00a9a2;
+  background: #ffbb3d;
   border-radius: 50%;
   height: 6px;
   position: absolute;
@@ -768,17 +739,21 @@ iframe {
   }
 }
 
+.div-footer {
+  display: flex;
+  min-height: 100%;
+}
+
 .footer {
   position: fixed;
   bottom: 0;
   width: 100vw;
-  background-color: #00a9a2;
+  background-color: rgb(41, 41, 41);
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 0 5px;
 }
 
 .footer img {
@@ -805,9 +780,10 @@ iframe {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
-  width: 100vw;
-  margin-bottom: 50px;
+  justify-content: space-around;
+  max-width: 100vw;
+  margin-bottom: 12%;
+  background-color: #cfc2ab;
 }
 
 .recipe-card {
@@ -818,14 +794,14 @@ iframe {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin: 5px 2px;
   border-radius: 5px;
   -webkit-box-shadow: 0 2px 5px black;
           box-shadow: 0 2px 5px black;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+    -ms-flex-align: center;
+  align-items: center;
   padding: 0;
   border: none;
 }
@@ -849,8 +825,9 @@ iframe {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin-top: 10px;
+  justify-content: space-around;
+  height: 20vh;
+  background-color: #cfc2ab;
 }
 
 .cat {
@@ -866,8 +843,8 @@ iframe {
   width: 90vw;
   margin: 10px;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+     -ms-flex-align: center;
+  align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   text-align: center;
