--- a/src/index.css
+++ b/src/index.css
@@ -320,6 +320,8 @@ iframe {
   margin-right: 2vw;
 }
 
+
+
 .search-bar {
   position: absolute;
   -webkit-transition: all 1s;
@@ -367,14 +369,32 @@ iframe {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  height: 90vh;
+  justify-content: flex-start;
 }
 
 .explore header {
-  margin-bottom: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  background-color: rgb(41, 41, 41);
+  width: 100vw;
+  height: 8vh !important;
+  font-family: KithcenHome, sans-serif;
+  padding: 0;
+  color: #e5ece9;
 }
 
 .explore-btns {
-  margin-top: 20vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -382,10 +402,16 @@ iframe {
   -webkit-box-direction: normal;
     -ms-flex-direction: column;
       flex-direction: column;
+  height: 100vh;
+  margin: 0;
+  align-content: center;
+  justify-content: center;
 }
 
 .explore-btns button {
   margin: 10px;
+  background-color: black;
+  height: 5vh;
 }
 
 .origin-select {
@@ -395,6 +421,22 @@ iframe {
 @font-face {
   font-family: KithcenHome;
   src: url("./fonts/KitchenHome-rg0gB.ttf");
+}
+
+.header h2 {
+  font-weight: 600;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: 50vw;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+    -ms-flex-align: end;
+      align-items: flex-end;
+  align-items: center;
+  justify-content: center;
 }
 
 .search-bar {
@@ -797,7 +839,8 @@ iframe {
   max-width: 100vw;
   max-height: 70vh;
   scroll-margin: 10vh;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .recipe-card {
@@ -857,7 +900,7 @@ iframe {
   height: 7.5vh;
   padding: 0 !important;
   border-color: #cfc2ab !important;
-  background-color: #da971b !important;
+  /* background-color: #da971b !important; */
 }
 
 .btn-info {
@@ -865,8 +908,8 @@ iframe {
   width: 32%;
   height: 7.5vh;
   border-color: #cfc2ab !important;
-  /* background-color: #df6464 !important; */
-  background-color: #da971b !important;
+  /* background-color: #df6464 !important;
+  background-color: #f5cb11 !important; */
   color: black !important;
 }
 
