Corrige pagina login

--- a/src/index.css
+++ b/src/index.css
@@ -175,6 +175,7 @@ iframe {
 
 .login {
   height: 100vh !important;
+  width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
