--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -1,24 +1,24 @@
 .login {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
   align-items: center;
   background-color: $cool-green;
   background-image: url('./images/tryberchef.jpg');
   background-size: cover;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
 
   .inputs {
+    backdrop-filter: blur(3px);
+    background-color: rgba(250, 250, 250, 0.8);
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
-    background-color: rgba(250, 250, 250, 0.8);
-    backdrop-filter: blur(3px);
     padding: 10px;
     width: 90vw;
-    border-radius: 5px;
   }
 }
 
 .btn-primary {
-  background-color: $cool-green !important;
-  border: none !important;
+  background-color: $cool-green;
+  border: none;
 }
