--- a/src/_App.scss
+++ b/src/_App.scss
@@ -1,52 +1,48 @@
-@import "./styles/colors";
+@import './styles/colors' ;
 
-@import "./styles/details";
+@import './styles/details' ;
 
-@import "./styles/in-progress";
+@import './styles/in-progress' ;
 
-@import "./styles/ingredients";
+@import './styles/ingredients' ;
 
-@import "./styles/login";
+@import './styles/login' ;
 
-@import "./styles/header";
+@import './styles/header' ;
 
-@import "./styles/explores";
+@import './styles/explores' ;
 
-@import "./styles/header";
+@import './styles/profile' ;
 
-@import "./styles/profile";
+@import './styles/loading' ;
 
-@import "./styles/loading";
+@import './styles/Footer' ;
 
-@import "./styles/Footer";
+@import './styles/recipes-list' ;
 
-@import "./styles/recipes-list";
-
-@import "./styles/done";
+@import './styles/done' ;
 
 @font-face {
   font-family: KithcenHome;
-  src: url("./fonts/KitchenHome-rg0gB.ttf");
+  src: url('./fonts/KitchenHome-rg0gB.ttf');
 }
 
 @font-face {
   font-family: Poppins;
-  src: url("./fonts/Poppins/Poppins-Regular.ttf");
+  src: url('./fonts/Poppins/Poppins-Regular.ttf');
 }
 
-main {
-  // height: 100vh;
-  font-family: Poppins, sans-serif;
-}
+// main {
+//   font-family: Poppins , sans-serif;
+//   height: 100vh;
+// }
 
-body {
-  border: 0;
-  padding: 0;
-  height: 100vh;
-}
-
-.icon,
-.share-icon,
-.favorite-img {
-  filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(4deg) brightness(104%) contrast(101%);
+// body {
+//   border: 0;
+//   height: 100vh;
+//   padding: 0;
+// }
+.icon, .share-icon, .favorite-img {
+  filter: invert(100%) sepia(100%) saturate(2%) hue-rotate
+    (4deg) brightness(104%) contrast(101%);
 }
