--- a/src/styles/_in-progress.scss
+++ b/src/styles/_in-progress.scss
@@ -1,7 +1,16 @@
-.in-progress {
+// .in-progress {
 
-  .in-progress-pic {
-    width: 100vw;
-  }
+//   img.in-progress-pic {
+//     width: 30vw;
+//   }
+//   .img-ingredients {
+//     display: flex;
+//     width: 100vw;
+//     justify-content: center;
+//   }
+//   .recipe-detail {
+//     display: flex;
+//     flex-direction: column;
+//   }
 
-}
+// }
